Estudiante,Profesor,Materia y Carrera añadido

--- a/ADSProject/Views/Shared/_Layout.cshtml
+++ b/ADSProject/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Estudiante", "Index", "Estudiante")</li>
+                                <li>@Html.ActionLink("Materia", "Index", "Materia")</li>
+                                <li>@Html.ActionLink("Profesor", "Index", "Profesor")</li>
+                                <li>@Html.ActionLink("Carreras", "Index", "Carrera")</li>
                             </ul>
                         </li>
                     </ul>
