--- a/ADSProject/Views/Estudiante/Form.cshtml
+++ b/ADSProject/Views/Estudiante/Form.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Form</h1>
-
-<h4>EstudianteViewModel</h4>
+<h4>Estudiante</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -38,7 +36,7 @@
                 <span asp-validation-for="correoEstudiante" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
