--- a/ADSProject/Views/Materia/Index.cshtml
+++ b/ADSProject/Views/Materia/Index.cshtml
@@ -52,7 +52,7 @@
                                        asp-route-IdMateria="@item.IdMateria"
                                        asp-action="Form"
                                        asp-route-operaciones="@Operaciones.leer">Leer</a>
-                                    <a class="btn btn-danger"
+                                    <a class="btn btn-danger eliminar"
                                        asp-route-IdMateria="@item.IdMateria"
                                        asp-action="Delete">Eliminar</a>
                                 </td>
