--- a/ADSProject/Views/Estudiante/Form.cshtml
+++ b/ADSProject/Views/Estudiante/Form.cshtml
@@ -10,6 +10,7 @@
 <div class="row">
     <div class="col-md-4">
         <input type="hidden" id="operacion" value="@ViewData["Operaciones"]"/>
+        <input type="hidden" id="_redirectURL" value="@Url.Action("Index","Estudiante")"/>
         <form asp-action="Form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -59,5 +60,9 @@
             }
 
         });
+
+        $("form").addClass("form-ajax");
+        initAjaxForm();
+
     </script>
 }
