--- a/ADSProject/Views/Shared/_Layout.cshtml
+++ b/ADSProject/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"] - ADSProject</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/jquery.loadingModal.css" />
+    <link rel="stylesheet" href="~/css/sweetalert2.min.css" />
 </head>
 <body>
     <header>
@@ -31,6 +33,7 @@
                                 <li>@Html.ActionLink("Materia", "Index", "Materia")</li>
                                 <li>@Html.ActionLink("Profesor", "Index", "Profesor")</li>
                                 <li>@Html.ActionLink("Carreras", "Index", "Carrera")</li>
+                                <li>@Html.ActionLink("Grupos", "Index", "Grupos")</li>
                             </ul>
                         </li>
                     </ul>
@@ -52,6 +55,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/ajax.js" asp-append-version="true"></script>
+    <script src="~/js/jquery.loadingModal.min.js" asp-append-version="true"></script>
+    <script src="~/js/sweetalert2.all.min.js" asp-append-version="true"></script>
+    <script src="~/js/sweetalert2.min.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
