--- a/ADSProject/Views/Carrera/Form.cshtml
+++ b/ADSProject/Views/Carrera/Form.cshtml
@@ -28,7 +28,7 @@
                 <input asp-for="nombreCarrera" class="form-control" />
                 <span asp-validation-for="nombreCarrera" class="text-danger"></span>
             </div>
-
+            <input type = "checkbox" asp -for= "estado" value = "true" type = "hidden"/>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
