--- a/ADSProject/Views/Estudiante/Form.cshtml
+++ b/ADSProject/Views/Estudiante/Form.cshtml
@@ -36,6 +36,7 @@
                 <input asp-for="correoEstudiante" class="form-control" />
                 <span asp-validation-for="correoEstudiante" class="text-danger"></span>
             </div>
+            <input type="checkbox" asp-for="estado" value="true" type="hidden" />
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
