--- a/ADSProject/Views/Materia/Form.cshtml
+++ b/ADSProject/Views/Materia/Form.cshtml
@@ -21,7 +21,7 @@
                 <input asp-for="Materia" class="form-control" />
                 <span asp-validation-for="Materia" class="text-danger"></span>
             </div>
-
+            <input type = "checkbox" asp -for= "estado" value = "true" type = "hidden" />
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
