--- a/ADSProject/Views/Profesor/Form.cshtml
+++ b/ADSProject/Views/Profesor/Form.cshtml
@@ -32,6 +32,7 @@
                 <input asp-for="correoProfesor" class="form-control" />
                 <span asp-validation-for="correoProfesor" class="text-danger"></span>
             </div>
+            <input type="checkbox" asp -for="estado" value="true" type="hidden"/>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
