--- a/ADSProject/Views/Materia/Index.cshtml
+++ b/ADSProject/Views/Materia/Index.cshtml
@@ -30,33 +30,43 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Materia)
                             </th>
+
+                            <th>
+                                @Html.DisplayNameFor(model => model.idCarrera)
+                            </th>
+
                             <th> Acciones </th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.IdMateria)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Materia)
-                                </td>
-                                <td>
-                                    <a class="btn btn-primary"
-                                       asp-route-IdMateria="@item.IdMateria"
-                                       asp-action="Form"
-                                       asp-route-operaciones="@Operaciones.modificar">Modificar</a>
-                                    <a class="btn btn-warning"
-                                       asp-route-IdMateria="@item.IdMateria"
-                                       asp-action="Form"
-                                       asp-route-operaciones="@Operaciones.leer">Leer</a>
-                                    <a class="btn btn-danger eliminar"
-                                       asp-route-IdMateria="@item.IdMateria"
-                                       asp-action="Delete">Eliminar</a>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.IdMateria)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Materia)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Carreras.nombreCarrera)
+                            </td>
+
+                            <td>
+                                <a class="btn btn-primary"
+                                   asp-route-IdMateria="@item.IdMateria"
+                                   asp-action="Form"
+                                   asp-route-operaciones="@Operaciones.modificar">Modificar</a>
+                                <a class="btn btn-warning"
+                                   asp-route-IdMateria="@item.IdMateria"
+                                   asp-action="Form"
+                                   asp-route-operaciones="@Operaciones.leer">Leer</a>
+                                <a class="btn btn-danger eliminar"
+                                   asp-route-IdMateria="@item.IdMateria"
+                                   asp-action="Delete">Eliminar</a>
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
