--- a/ADSProject/Views/Estudiante/Form.cshtml
+++ b/ADSProject/Views/Estudiante/Form.cshtml
@@ -1,8 +1,10 @@
 ﻿@model ADSProject.Models.EstudianteViewModel
-
+@using ProyectoADS.Models
 @{
     ViewData["Title"] = "Form";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    List<CarrerasViewModel> lstCarreras = new List<CarrerasViewModel>();
+    lstCarreras = ViewBag.Carreras;
 }
 
 <h4>Estudiante</h4>
@@ -36,6 +38,19 @@
                 <input asp-for="correoEstudiante" class="form-control" />
                 <span asp-validation-for="correoEstudiante" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="idCarrera" class="control-label"></label>
+                <select asp-for="idCarrera" class="form-control">
+                    <option selected disabled>Seleccione una opcion</option>
+                    @foreach (var item in lstCarreras)
+                    {
+                        <option value="@item.idCarrera">@item.nombreCarrera</option>
+                    }
+                    <span asp-validation-for="idCarrera" class="text-danger"></span>
+                </select>
+            </div>
+
             <input type="checkbox" asp-for="estado" value="true" type="hidden" />
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
