--- a/ADSProject/Views/Grupos/Index.cshtml
+++ b/ADSProject/Views/Grupos/Index.cshtml
@@ -1,17 +1,26 @@
 ﻿@model IEnumerable<ProyectoADS.Models.GrupoViewModel>
 @using ADSProject.Utils
 
-@{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@{ ViewData["Title"] = "Index";
+                Layout = "~/Views/Shared/_Layout.cshtml"; }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Form" asp-route-operaciones="@Operaciones.agregar">Create New</a>
-</p>
-<table class="table">
+<div class="container">
+    <div class="col-sm-12">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Grupos</h3>
+            </div>
+            <div class="col-sm-6">
+                <a class="btn btn-success d-block" asp-action="Form"
+                   asp-route-operaciones="@Operaciones.agregar">Agregar Grupo</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-12">
+        @if (Model.Count() > 0)
+        {
+<table class="table table-bordered table-striped">
     <thead>
         <tr>
             <th>
@@ -30,38 +39,55 @@
                 @Html.DisplayNameFor(model => model.ciclo)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.anio)
+                @Html.DisplayNameFor(model => model.anio);
             </th>
-            <th></th>
+
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.idGrupo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.idCarrera)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.idMateria)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.idProfesor)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ciclo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.anio)
-                </td>
-                <td>
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                </td>
-            </tr>
-        }
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.idGrupo)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Carreras.nombreCarrera)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Materias.Materia)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Profesor.nombresProfesor)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.ciclo)
+    </td>
+
+    <td>
+        @Html.DisplayFor(modelItem => item.anio)
+    </td>
+
+    <td>
+        <a class="btn btn-primary"
+           asp-route-idEstudiante="@item.idGrupo"
+           asp-action="Form"
+           asp-route-operaciones="@Operaciones.modificar">Modificar</a>
+        <a class="btn btn-warning"
+           asp-route-idEstudiante="@item.idGrupo"
+           asp-action="Form"
+           asp-route-operaciones="@Operaciones.leer">Leer</a>
+        <a class="btn btn-danger eliminar"
+           asp-route-idEstudiante="@item.idGrupo"
+           asp-action="Delete">Eliminar</a>
+    </td>
+</tr>}
     </tbody>
-</table>
+</table> }
+            else
+            {
+<h3 class="text-center">Lista vacia.</h3>}
+    </div>
+</div>
+
