--- a/ADSProject/Views/Grupos/Form.cshtml
+++ b/ADSProject/Views/Grupos/Form.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProyectoADS.Models.GrupoViewModel
+﻿
+@model ProyectoADS.Models.GrupoViewModel
 @using ProyectoADS.Models
 @{
     ViewData["Title"] = "Form";
@@ -21,16 +22,16 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Form">
+            <input type="hidden" id="operacion" value="@ViewData["Operaciones"]" />
+            <input type="hidden" id="_redirectURL" value="@Url.Action("Index", "Grupo")" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="idGrupo" class="control-label"></label>
-                <input asp-for="idGrupo" class="form-control" />
-                <span asp-validation-for="idGrupo" class="text-danger"></span>
+                <input asp-for="idGrupo" type="hidden" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="idCarrera" class="control-label"></label>
 
-                <select asp-for="idCarrera" class="form-control">
+                <select id="carreras" asp-for="idCarrera" class="form-control">
                     <option selected disabled>Seleccione una carrera</option>
                     @foreach (var item in lstCarreras)
                     {
@@ -42,7 +43,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="idMateria" class="control-label"></label>
-                <select asp-for="idMateria" class="form-control">
+                <select id="materias" asp-for="idMateria" class="form-control">
                     <option selected disabled>Seleccione una materia</option>
                     @foreach (var item in lstMaterias)
                     {
@@ -59,7 +60,6 @@
                     @foreach (var item in lstProfesores)
                     {
                         <option value="@item.idProfesor">@item.nombresProfesor  @item.apellidosProfesor</option>
-
                     }
                 </select>
 
@@ -75,9 +75,9 @@
                 <input asp-for="anio" class="form-control" />
                 <span asp-validation-for="anio" class="text-danger"></span>
             </div>
-            <input type="checkbox" asp-for="estado" value="true" type="hidden" />
+            <input type="checkbox" value="true" asp-for="estado" type="hidden" />
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+                <input type="submit" value="Agregar" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -88,19 +88,65 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+
+
     <script>
-        $(document).ready(function () {
-            // Cuando la operacion sobre el formulario es de lectura.
+    $(document).ready(function() {
+      // Cuando la operación es Ver, entonces se deben deshabilitar los controles del formulario.
             if ($("#operacion").val() == "leer") {
-
-                $("form").find("input,select").attr("disabled", true);
-
+                $("form").find("input, select").attr("disabled", true);
             }
+         //Agregamos a los formularios la clase form-ajax
+         //La cual activa el formulario para trabajar con Ajax
+          $("form").addClass("form-ajax");
+            //Activamos Ajax
+            initAjaxForm();
+        $("#carreras").change(cargarMaterias);
 
-        });
-
-        $("form").addClass("form-ajax");
-        initAjaxForm();
+        $("#carreras").trigger("change");
+    });
+    // Funcion que hace el llamado para aplicar el filtro de las materias
+    function cargarMaterias() {
+            selectLoadingData('@Url.Action("cargarMaterias", "Grupo")?idCarrera=' + $("#carreras").val(), $("#materias"));
+        }
+    /// Permite cargar todas las materias asociadas a una carrera
+        function selectLoadingData(URL, select){
+             $.ajax({
+                url: URL,
+                headers: {
+                    'Accept': "application/json; charset=utf-8"
+                },
+                beforeSend: function () {
+                    console.log("Iniciando petición...");
+                },
+                success: function (data) {
+                    var valorSeleccionado = $("#materias").val();
+                    select.html("<option value=''>[Seleccione una opción]</option>");
+                    $.each(data, function (index, item) {
+                        console.log(item);
+                        if (valorSeleccionado == item.idMateria) {
+                            select.append(`<option selected value=${item.idMateria}>${item.nombreMateria}</option>`);
+                        } else {
+                            select.append(`<option value=${item.idMateria}>${item.nombreMateria}</option>`);
+                        }
+                    });
+                },
+                error: function (xhr, textStatus, errorThrown) {
+                    console.log("Ocurrió un error en la petición.");
+                },
+                complete: function () {
+                    console.log("Petición completada.");
+                },
+                type: "GET",
+                contentType: false,
+                processData: false,
+                async: true,
+                cache: false
+             });
+        }
     </script>
 }
